loader css z-index fix

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -41,6 +41,7 @@ div {
 
 .loader {
     position: absolute;
+    z-index: 10;
     top: 48%;
     left: 30%;
     width: 40%;
